[package]
name = "sediment"
authors = ["rusty-sediment"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sediment-cli"
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation"] }
xorf = { version = "0.8", features = ["serde"] }
once_cell = "1.17"

sled = { version = "0.34", optional = true }
ctrlc = { version = "3.3", optional = true }
governor = { version = "0.5", optional = true }
winreg = { version = "0.5", optional = true }
indicatif = { version = "0.17", optional = true }
flate2 = { version = "1.0", optional = true }
reqwest = { version = "0.11", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
tokio = { version = "1.28", features = ["rt-multi-thread", "sync", "fs"], optional = true }


[features]
default = ["cli"]
cli = ["clap", "ctrlc", "sled", "governor", "winreg", "indicatif", "flate2", "tokio", "reqwest"]
