[package]
name = "sediment"
authors = ["rusty-sediment"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["active-directory", "security", "password-filter"]
description = "An Active Directory password filter."
homepage = "https://github.com/rusty-sediment/sediment"
repository = "https://github.com/rusty-sediment/sediment"

[[bin]]
name = "sediment-cli"
required-features = ["cli"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "filter_benchmark"
harness = false

[dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
winlog = { package = "winlog2", version = "0.3" }
xorf = { git = "https://github.com/rusty-sediment/xorf.git", branch = "patch-1", version = "0.8" }
bincode = "1.3"
zeroize = "1.6"
winreg = "0.5"
sha1 = "0.10"
log = "0.4"

sled = { version = "0.34", optional = true }
ctrlc = { version = "3.3", optional = true }
governor = { version = "0.5", optional = true }
indicatif = { version = "0.17", optional = true }
flate2 = { version = "1.0", optional = true }
reqwest = { version = "0.11", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
tokio = { version = "1.28", features = ["rt-multi-thread", "sync", "fs"], optional = true }


[features]
default = ["cli"]
cli = ["clap", "ctrlc", "sled", "governor", "indicatif", "flate2", "tokio", "reqwest"]
